# Traffic-open-env-rl

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  demo.py  environment.py  grader.py  inference.py  models.py  openm.yaml  pyproject.toml  requirements.txt  task_definitions.py  version.txt
graders/: __init__.py  grader_emergency_response.py  grader_phase_management.py  grader_queue_optimization.py
server/: app.py  models.py  traffic_environment.py
tasks/: __init__.py  task_emergency_response.py  task_phase_management.py  task_queue_optimization.py
